Revision history for the Perl Win32-IPC modules.

1.09  NOT
	- The tools directory has been renamed inc for consistency
	  with other CPAN distributions

1.08  December 11, 2010
	- Localize $@ when using eval

	- Includes a CPAN Meta v2 META.json file.

	- The passthrough Makefile.PL has been removed.

1.07  April 16, 2008
	- There are no significant functional changes in 1.07.	If
	  you've already installed 1.06, don't bother upgrading.

	- Give a more useful error message if Module::Build is not installed

	- Don't bother to test $! after fetching constant('INFINITE')

	- Added LICENSE AND COPYRIGHT section to documentation

1.06  April 15, 2008
	- *** INCOMPATIBLE CHANGE ***

	  Passing undef as the value of an optional parameter is now
	  the same as omitting that parameter.	In previous versions,
	  undef was interpreted as either the empty string or 0 (along
	  with a warning about "Use of uninitialized value...").

	  In particular, if you pass undef as the timeout, it now
	  means INFINITE, but to previous versions it meant 0.

	- The modules now use XSLoader instead of DynaLoader.

	- Copied Yves Orton's fix (from Win32::ChangeNotify 1.04) so
	  "a true value" no longer has to be a non-zero number to all
	  relevant places.

	- Win32::IPC and its subclasses are now distributed separately
	  from libwin32 (which has been broken up).  Prior to this
	  release, each module had its own Changes file, and their
	  version numbers were not synchronized.  Those files are
	  appended below.


======================================================================
Revision history for Perl extension Win32::IPC.

1.03  Fri Jul 11 15:40:00 2003
	- revised how WaitForMultiple handles non-Win32::IPC objects

1.02  Mon May 22 21:16:37 2000
	- support for building under Perl v5.6.0

1.01  Tue Sep 15 12:25:16 1998
	- use New/Safefree instead of safemalloc/safefree

1.00  Fri Feb  6 1998 10:51:40
	- Rewritten from ActiveWare version by Christopher J. Madsen